fix(test): use toURI instead of toPath to provide platform compat