@@ -1,7 +1,9 @@
 package io.getunleash.util;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class ResourceReader {
@@ -11,8 +13,8 @@ public class ResourceReader {
             throw new IllegalArgumentException("Resource not found: " + resourceName);
         }
         try {
-            return Files.readString(Paths.get(resourceUrl.getPath()));
-        } catch (IOException e) {
+            return Files.readString(Path.of(resourceUrl.toURI()));
+        } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
